<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/text_current_interval_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_current_interval"
        app:layout_constraintTop_toTopOf="@+id/text_current_interval" />

    <TextView
        android:id="@+id/text_target_tiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_target_tiles"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_current_number_of_target_tile_colors" />

    <Spinner
        android:id="@+id/sp_target_tiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:entries="@array/num_target_tiles"
        android:prompt="@string/number_of_target_tiles"
        app:layout_constraintStart_toEndOf="@+id/text_target_tiles"
        app:layout_constraintTop_toTopOf="@+id/text_target_tiles" />

    <TextView
        android:id="@+id/text_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/interval"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_target_tiles" />

    <Spinner
        android:id="@+id/sp_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:entries="@array/interval_time"
        android:prompt="@string/interval"
        app:layout_constraintStart_toEndOf="@+id/text_interval"
        app:layout_constraintTop_toTopOf="@+id/text_interval" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/save"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_current_number_of_tiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_number_of_target_tiles"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_current_number_of_target_tiles_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_current_number_of_tiles"
        app:layout_constraintTop_toTopOf="@+id/text_current_number_of_tiles" />

    <TextView
        android:id="@+id/text_current_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_interval_milliseconds"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_current_number_of_tiles" />

    <TextView
        android:id="@+id/text_current_target_tiles_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/colors_of_target_tile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_of_target_tiles" />

    <Button
        android:id="@+id/button_target_tile_color1"
        style="@style/AppTheme.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_current_target_tiles_colors" />

    <Button
        android:id="@+id/button_target_tile_color2"
        style="@style/AppTheme.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        app:layout_constraintStart_toEndOf="@+id/button_target_tile_color1"
        app:layout_constraintTop_toBottomOf="@+id/text_current_target_tiles_colors" />

    <Button
        android:id="@+id/button_target_tile_color3"
        style="@style/AppTheme.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        app:layout_constraintStart_toEndOf="@+id/button_target_tile_color2"
        app:layout_constraintTop_toBottomOf="@+id/text_current_target_tiles_colors" />

    <TextView
        android:id="@+id/num_of_target_tiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_target_tile_colors"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_interval" />

    <Spinner
        android:id="@+id/sp_target_tile_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/num_of_target_tiles"
        app:layout_constraintTop_toTopOf="@+id/num_of_target_tiles" />

    <TextView
        android:id="@+id/text_current_number_of_target_tile_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_number_of_target_tile_colors"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_current_interval" />

    <TextView
        android:id="@+id/text_current_target_tile_colors_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_current_number_of_target_tile_colors"
        app:layout_constraintTop_toTopOf="@+id/text_current_number_of_target_tile_colors" />
</androidx.constraintlayout.widget.ConstraintLayout>